[package]
name = "adblock-wasm"
version = "0.2.0"
authors = ["Rajaram Gaunker <rajarams@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
adblock = "0.3.4"
